--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="inputs">
+        <input type="text" class="text-input">
+        <div class="buttons">
+            <button id="add"> Agregar</button>
+            <button id="del"> Borrar</button>
+        </div>
+
+    </div>
+
+    <div class="table-register" id="table-register">
+        <table>
+            <thead>
+                <th>Nro</th>
+                <th>Concepto</th>
+                <th>Fecha</th>
+            </thead>
+            <tbody>
+                <tr></tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
