--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
+    <link rel="Stylesheet" type="text/css" href="style.css" media="screen">
     <title>Workshop</title>
 
 </head>
 <body>
+    <h2>Cronometro</h2>
+    <div class = "cronometro">
+        <h1><time>00:00:00</time></h1>
+        <div class="boton">
+            <button id="iniciar">Iniciar/Continuar</button>
+            <button id="parar">Detener</button>
+            <button id="reiniciar">Reiniciar</button>
+        </div>
+    </div>
+
     <div class="inputs">
         <input type="text" class="text-input">
         <div class="buttons">
