--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
 </head>
 <body>
+    <div class = "imagen"  >
+        <img id="hola" src="https://cdn.dribbble.com/users/2978360/screenshots/6914572/comp_1.gif" 
+        height="100" width="100">
+    </div>
     <h2>Cronometro</h2>
     <div class = "cronometro">
         <h1><time>00:00:00</time></h1>
         <div class="boton">
             <button id="iniciar">Iniciar/Continuar</button>
-            <button id="parar">Detener</button>
+            <button id="parar" onclick="Ocultar()">Detener</button>
             <button id="reiniciar">Reiniciar</button>
         </div>
     </div>
