--- a/index.html
+++ b/index.html
@@ -5,30 +5,79 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./script.js" defer></script>
-    <title>Workshop</title>
+    <link rel="stylesheet" href="./style.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>Fun Code</title>
 
 </head>
 <body>
+
+   <header id="header"> Awesome Tools </header>
+
+   <div class="toogle-cont">
+   <input type="button" value="Tabla" id="toogle" class="toogle" onclick="change()">
+   </div>
+
+   <div class="weather" id="wetab">
+
+
+    <div class="weather-head">
+        <img src="https://i.pinimg.com/originals/77/0b/80/770b805d5c99c7931366c2e84e88f251.png" alt="weather image"
+            width="10%">
+        <h3>Weather Track</h3>
+    </div>
+    
     <div class="inputs">
-        <input type="text" class="text-input">
+        <div class="input-group mb-3">
+            <div class="input-group-prepend">
+            </div>
+            <input style="border-radius: 6px;" type="text" class="form-control" placeholder="Username" aria-label="Username" id="weather"
+                aria-describedby="basic-addon1">
+        </div>
         <div class="buttons">
-            <button id="add"> Agregar</button>
-            <button id="del"> Borrar</button>
+            <button type="submit" class="btn btn-primary" onclick="addInTable()">Agregar</button>
+            <button type="button" class="btn btn-primary" onclick="deleteRecord()">Borrar Utlimo</button>
         </div>
 
     </div>
 
-    <div class="table-register" id="table-register">
-        <table>
-            <thead>
+    <div class="table-register shadow p-3 mb-5 bg-white rounded " id="table-register">
+        <table class="table ">
+            <thead >
                 <th>Nro</th>
-                <th>Concepto</th>
+                <th>Estado del Clima</th>
                 <th>Fecha</th>
             </thead>
-            <tbody>
-                <tr></tr>
+            <tbody id="table-body" class="table-body">
+                <tr>
+                    <td>1</td>
+                    <td>Nublado</td>
+                    <td>8-12-2022 9:52:07 PM</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Soleado</td>
+                    <td>7-21-2022 2:02:32 PM</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Despejado</td>
+                    <td>6-21-2022 5:45:43 PM</td>
+                </tr>
             </tbody>
         </table>
     </div>
+
+</div>
+
+<footer class="bg-light text-center text-lg-start">
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-dark" href="#header">Awesome Tools</a>
+    </div>
+    <!-- Copyright -->
+  </footer>
 </body>
 </html>
