--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <title>Fun Code</title>
+    <title>Workshop</title>
 
 </head>
 <body>
@@ -51,7 +51,7 @@
         <div class="input-group mb-3">
             <div class="input-group-prepend">
             </div>
-            <input style="border-radius: 6px;" type="text" class="form-control" placeholder="Username" aria-label="Username" id="weather"
+            <input style="border-radius: 6px;" type="text" class="form-control" placeholder="¿Como esta el clima ahora mismo?" aria-label="Username" id="weather"
                 aria-describedby="basic-addon1">
         </div>
         <div class="buttons">
