--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
     <h2>Cronometro</h2>
     <div class = "cronometro">
-        <h1><time>00:00:00</time></h1>
+        <h1 id="cron-text"><time>00:00:00</time></h1>
         <div class="boton">
             <button id="iniciar">Iniciar/Continuar</button>
             <button id="parar" onclick="Ocultar()">Detener</button>
