--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     <div class = "cronometro">
         <h2>Cronometro</h2>
-        <h1 id="cron-text" class="shadow p-3 mb-5 bg-white rounded"><time>00:00:00</time></h1>
+        <h1 id="cron-text"><time>00:00:00</time></h1>
         <div class="boton">
             <button id="iniciar">Iniciar/Continuar</button>
             <button id="parar" onclick="Ocultar()">Detener</button>
