--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         </div>
         <div class="buttons">
             <button type="submit" class="btn btn-primary" onclick="addInTable()">Agregar</button>
-            <button type="button" class="btn btn-primary" onclick="deleteRecord()">Borrar Utlimo</button>
+            <button type="button" class="btn btn-outline-primary" onclick="deleteRecord()">Borrar Utlimo</button>
+         
         </div>
 
     </div>
